[package]
name = "commandargs"
version = "0.1.1"
edition = "2024"

authors = ["NotFlawffles notflawffles@gmail.com"]
description = "Minimal, precise library for primarily fetching and sorting runtime command line arguments accordingly."
license = "MIT"
repository = "https://github.com/NotFlawffles/commandargs"
readme = "README.md"

[dependencies]
